2023-09-24T16:15:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6291105459 # 1206
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
* notice: last 14d: unq all: 4 3125
* notice: prev accum: outdated-unq outdated-all / unq all: 1702 160797 / 1732 163866
* notice: next accum: outdated-unq outdated-all / unq all: 1702 160797 / 1732 163959
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -18 / +2 +205 -0 -0 / 2 205
* notice: removed / changed dates: [] / [2023-09-10 2023-09-24]

2023-09-24T08:14:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6288933189 # 1205
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
* notice: last 14d: unq all: 4 3050
* notice: prev accum: outdated-unq outdated-all / unq all: 1702 160797 / 1730 163754
* notice: next accum: outdated-unq outdated-all / unq all: 1702 160797 / 1732 163866
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -16 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-09-10 2023-09-24]

2023-09-24T01:01:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6287057364 # 1204
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
* notice: last 14d: unq all: 4 2954
* notice: prev accum: outdated-unq outdated-all / unq all: 1699 160498 / 1730 163660
* notice: next accum: outdated-unq outdated-all / unq all: 1702 160797 / 1730 163754
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -3 / +2 +301 -0 -0 / 2 301
* notice: removed / changed dates: [2023-09-09] / [2023-09-10 2023-09-23]

2023-09-23T16:14:59Z: