@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-15T08:16:50Z",
-  "count" : 51,
-  "count_minmax" : [ 51, 51 ],
-  "count_decinc" : [ -0, +51 ],
+  "timestamp" : "2023-09-25T00:59:11Z",
+  "count" : 50,
+  "count_minmax" : [ 50, 51 ],
+  "count_decinc" : [ -1, +51 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
