@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-09-24T16:15:17Z",
-  "count_outdated" : 160797,
-  "uniques_outdated" : 1702,
-  "count" : 163959,
+  "timestamp" : "2023-09-25T00:59:11Z",
+  "count_outdated" : 160850,
+  "uniques_outdated" : 1704,
+  "count" : 164055,
   "uniques" : 1732,
   "clones" : [
     {
-      "timestamp": "2023-09-10T00:00:00Z",
-      "count": 16,
-      "count_minmax": [ 16, 53 ],
-      "count_decinc": [ 37, 53 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
       "timestamp": "2023-09-11T00:00:00Z",
-      "count": 51,
-      "count_minmax": [ 51, 51 ],
-      "count_decinc": [ 0, 51 ],
+      "count": 50,
+      "count_minmax": [ 50, 51 ],
+      "count_decinc": [ 1, 51 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-09-24T00:00:00Z",
-      "count": 205,
-      "count_minmax": [ 112, 205 ],
-      "count_decinc": [ 0, 205 ],
+      "count": 301,
+      "count_minmax": [ 112, 301 ],
+      "count_decinc": [ 0, 301 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
