@@ -1,15 +1,10 @@
 {
-  "count": 3125,
-  "uniques": 4,
+  "count": 3204,
+  "uniques": 3,
   "clones": [
     {
-      "timestamp": "2023-09-10T00:00:00Z",
-      "count": 16,
-      "uniques": 2
-    },
-    {
       "timestamp": "2023-09-11T00:00:00Z",
-      "count": 51,
+      "count": 50,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-09-24T00:00:00Z",
-      "count": 205,
+      "count": 301,
       "uniques": 2
     }
   ]
